--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,12 @@ services:
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
-    repo: https://github.com/matrixbotz0/PETER-PARKER-BOT.git      
+    name: mybot
+    runtime: python
+    env:
+      pythonVersion: 3.12.4
+    
+     repo: https://github.com/matrixbotz0/PETER-PARKER-BOT.git      
     branch: main
     envVars:
       - key: BOT_TOKEN 
