--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 pyrogram>=2.0.30
 tgcrypto
 
-# MongoDB stack compatible with Python 3.10
 pymongo[srv]==3.12.3
 motor==2.5.1
 marshmallow==3.14.1
@@ -39,5 +38,5 @@ Pillow
 speedtest-cli
 python-dotenv
 
-# lxml: works perfectly on Python 3.10 (no build errors)
+# Correct version for Python 3.10.8
 lxml==4.9.3
